Name:                anarchy
Version:             0.0
Synopsis:            P2P broadast network.
-- Description:         
License:             BSD3
License-file:        LICENSE
Author:              David Hinkes
Maintainer:          david.hinkes@gmail.com
Category:            Network
Build-type:          Simple

Cabal-version:       >=1.2


Executable anarchy
  -- .hs or .lhs file containing the Main module.
  Main-is: Main.hs 
  Hs-source-dirs: src            
  
  -- Packages needed in order to build this package.
  Build-depends: base     
  
  -- Modules not exported by this package.
  Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
